--- a/Spreadsheet6.html
+++ b/Spreadsheet6.html
@@ -24,7 +24,7 @@
 
 <style>
 
-    #grid_array.pq-gri
+    #grid_array.pq-grid *
 
     {
 
@@ -41,7 +41,7 @@
 
     }
 
-    .yellowState {
+    .yellowState
 
         background-color: rgb(100%,100%,70%)
 
